Name:                samtools-enumerator
Version:             0.0.20110220
Synopsis:            Enumerator interface to SamTools library
License:             MIT
License-file:        LICENSE
Author:              Nicholas Ingolia
Maintainer:          nick@ingolia.org
Category:            Bio

Build-type:          Simple
Cabal-version:       >=1.2

Library
  Exposed-modules:     Bio.SamTools.Enumerator
  Build-depends:       base == 4.*, bytestring == 0.9.*, haskell98, samtools, transformers, enumerator == 0.4.*
  Hs-Source-Dirs:      src

Executable samenumtest1
  Build-depends:       base, bytestring, haskell98, samtools, enumerator 
  Hs-Source-Dirs:      src, test
  Main-Is:             SamEnumTest1.hs
