Name:                samtools-enumerator
Version:             0.1
Synopsis:            Enumerator interface to SamTools library
License:             MIT
License-file:        LICENSE
Author:              Nicholas Ingolia
Maintainer:          nick@ingolia.org
Category:            Bio

Build-type:          Simple
Cabal-version:       >=1.2

Library
  Exposed-modules:     Bio.SamTools.Enumerator
  Build-depends:       base == 4.*, bytestring == 0.9.*, haskell98, transformers, enumerator == 0.4.*, samtools == 0.1.*
  Hs-Source-Dirs:      src

