Name:                samtools-iteratee
Version:             0.1
Synopsis:            Iteratee interface to SamTools library
License:             MIT
License-file:        LICENSE
Author:              Nicholas Ingolia
Maintainer:          nick@ingolia.org
Category:            Bio

Build-type:          Simple
Cabal-version:       >=1.2

Library
  Exposed-modules:     Bio.SamTools.Iteratee
  Build-depends:       base == 4.*, bytestring == 0.9.*, haskell98, samtools, transformers, iteratee == 0.8.*
  Hs-Source-Dirs:      src
